assets/css/style.css
/* ... */
section.sponsor-category{
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    margin-bottom: 100px;
    align-items: center;
    justify-content: center;
    
}

figure.other {
    width: 14%;
    height: 100px;
    margin-left: 7%;
    margin-bottom: 60px;
}
figure.other:nth-of-type(5n+1) {
    margin-left: 0;
}
figure {
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 40px;
    margin-inline-end: 40px;
}
.other{
  transform: scale(1.2);
  color: rgb(10, 24, 27);
    
}

.background-logo{
    width: 160px;
    height: 140px;
    background-position: 50%;
    background-size: contain;
    background-repeat: no-repeat;
}
figure.other{
    width: 14%;
    height: 100px;
    margin-left: 7%;
    margin-right: 0;
    margin-bottom: 60px;
}
figure.other a{
    position: relative;
    width: 100%;
    height: 100%;
}
section.sponsor-category {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    margin-bottom: 100px;
    align-items: center;
    justify-content: center;
}


.background-logo{
    width: 160px;
    height: 140px;
    background-position: 50%;
    background-size: contain;
    background-repeat: no-repeat;
}
.other .zagrebačkabanka .background-logo
{
  width:300px;
}

figure.other:nth-child(2n) {
  transform: translateY(10px) scale(1.15);
}

figure.other:nth-child(3n) {
  transform: translateY(-8px) scale(1.05);
}

figure.other:nth-child(4n) {
  transform: translateY(15px) scale(1.2);
}
figure.other {
  opacity: 0;
  animation: fadeLoop 8s ease-in-out infinite;
}

@keyframes fadeLoop {
  0% {
    opacity: 0;
    transform: scale(0.95);
  }

  20% {
    opacity: 1;
    transform: scale(1);
  }

  60% {
    opacity: 1;
    transform: scale(1);
  }

  100% {
    opacity: 0;
    transform: scale(0.95);
  }
}

figure.other:nth-child(1) { animation-delay: 0s; }
figure.other:nth-child(4) { animation-delay: 1s; }
figure.other:nth-child(6) { animation-delay: 2s; }
figure.other:nth-child(3) { animation-delay: 2.3s; }
figure.other:nth-child(5) { animation-delay: 5s; }
figure.other:nth-child(2) { animation-delay: 3s; }

.notice-board{
    text-align: center;
}
.notice-board__title {
  font-size: 38px;
  font-weight: 700;
  margin-bottom: 80px;
}

.notice-board__subtitle {
  font-size: 32px;
  color: rgb(48, 206, 194);
  font-weight: 700;
}
h2.sponsor-category-description {
    margin-top: 45px;
    margin-bottom: 75px;
    text-align: center;
    font-size: 40px;
    color: #30cec2;
}


.job-list__container {
  display: block;
  font-family: "Fuse V.2 Display", Arial, sans-serif;
  overflow-x: auto;
  overflow-y: hidden;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 50px;
}

.job-slider {
  display: flex;
  gap: 32px;
  cursor: grab;
  height: auto;
  padding-top: 10px;
  padding-left: 60px;
  margin-top: 50px;
  margin-bottom: 100px;
}

.job {
  flex: 0 0 464px;
  background-color: rgba(255, 255, 255, 0.05);
  border-radius: 38px;
  padding: 20px 40px 30px;
  display: flex;
  flex-direction: column;
  transition: transform 0.3s ease;
  text-align: left;
}

.job:hover {
  transform: scale(1.05);
}

.job--gold {
  height: fit-content;
}

.background-logo {
  width: 168px;
  height: 52px;
  background-repeat: no-repeat;
  background-position: left center;
  background-size: contain;
  margin-bottom: 32px;
}

.fortunaentertainmentgroup {
  background-image: url("https://2021.days.dump.hr/img/fortunaentertainmentgroup.2bbf732d.svg");
}

.ericssonnikolatesla {
  background-image: url("https://2021.days.dump.hr/img/ericssonnikolatesla.2fd8c0d2.svg");
}

.littlecode {
  background-image: url("https://2021.days.dump.hr/img/littlecode.858a8879.svg");
}

.infobip {
  background-image: url("https://2021.days.dump.hr/img/infobip.6b18c0a5.svg");
}

.undabot {
  background-image: url("https://2021.days.dump.hr/img/undabot.1b75377b.svg");
}

.hrcloud {
  background-image: url("https://2021.days.dump.hr/img/hrcloud.b452de8e.svg");
}

.netmedia {
  background-image: url("https://2021.days.dump.hr/img/netmedia.6af36d40.png");
}

.zagrebačkabanka {
  background-image: url("https://2021.days.dump.hr/img/zagreba%C4%8Dkabanka.616721c4.png");
}

.emovis {
  background-image: url("https://2021.days.dump.hr/img/emovis.7041c117.png");
}

.blank {
  background-image: url("https://2021.days.dump.hr/img/blank.807930cc.png");
}

.typeqast {
  background-image: url("https://2021.days.dump.hr/img/typeqast.71da5597.svg");
}

.five {
  background-image: url("https://2021.days.dump.hr/img/five.e95ed8f1.svg");
}
.extensionengine {
  background-image: url("https://2021.days.dump.hr/img/extensionengine.74f96ea3.png");
}
.rimac {
  background-image: url("https://2021.days.dump.hr/img/rimacautomobili.e882c49b.svg");
}
.fesb {
  background-image: url("https://2021.days.dump.hr/img/fesb.c7baa797.svg");
}
.split {
  background-image: url("https://2021.days.dump.hr/img/gradsplit.d7a56d64.svg");
}
.hiperprodukcija {
  background-image: url("https://2021.days.dump.hr/img/hiperprodukcija.9c8d3dfc.svg");
}
.studentskizbor {
  background-image: url("https://2021.days.dump.hr/img/studentskizbor.fcf92f02.svg");
}
.sveuciliste {
  background-image: url("https://2021.days.dump.hr/img/sveučilišteusplitu.1aafa872.svg");
}
.bug {
  background-image: url("https://2021.days.dump.hr/img/bug.33bb0fd4.svg");
}
.netokracija {
  background-image: url("https://2021.days.dump.hr/img/netokracija.fcb66757.svg");
}
.radiokampus {
  background-image: url("https://2021.days.dump.hr/img/radiokampus.1f8eee82.png");
}
.splittechcity {
  background-image: url("https://2021.days.dump.hr/img/splittechcity.3594924d.svg");
}
.ultrasplit {
  background-image: url("https://2021.days.dump.hr/img/ultrasplit.d71f5757.png");
}
.job__name span {
  font-size: 24px;
  font-weight: 600;
}

.job__location {
  display: flex;
  align-items: center;
  gap: 8px;
  margin: 12px 0 24px;
  opacity: 0.8;
}

.job__location-icon {
  width: 16px;
  height: 16px;
}
/* ... */

